examples/failing/semantics/unlock_another_threads_lock.gm
lock l;
t = spawn {
  unlock l;
};
join t;
